# grpc-rust-scylladb-kafka

./: .env  Cargo.toml  build.rs  compose.yaml
proto/: notes.proto
src/: lib.rs  main.rs
src/application/: services.rs
src/domain/: event_publisher.rs  mod.rs  models.rs  repository.rs
src/infrastructure/messaging/: kafka.rs
src/infrastructure/persistence/: scylla.rs
src/interfaces/grpc/: handlers.rs
